Closed Bug 1946586 Opened 6 months ago Closed 1 month ago

Opaque region not set with SW-WR

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
142 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox-esr140 --- fix-optional
firefox135 --- wontfix
firefox136 --- wontfix
firefox137 --- wontfix
firefox138 --- wontfix
firefox140 --- wontfix
firefox141 --- wontfix
firefox142 --- fixed

People

(Reporter: rmader, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Similar to bug 1933823 the opaque region does not get set when using the SW-WR.

STR:

  • run a Gnome session and enable the opaque overlay (alt+f2->lg->Flags->OPAQUE_REGION)
  • run FF with SW-WR

Tested on 135 and nightly (from today, 137)

Curious if it's s regression tho?

Flags: needinfo?(stransky)

(In reply to Emilio Cobos Álvarez (:emilio) from comment #1)

Curious if it's s regression tho?

It worked at some point a year or two ago :P But didn't have time to run mozregression yet.

Same regressor as Bug 1933823.

Note that new windows need to be resized for the opaque region to be applied with SW-WR while it gets applied immediately with HW-WR.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=aa6305a65fb5e7e7a9a1c0b572cdb0e2d4dac4fc&tochange=05fe9b71651f981ada58733864135b940f9c27b0

Regressed by Bug 1915230.

Flags: needinfo?(stransky)

This probably means that this broke sometime in-between bug 1915230 landed, and bug 1908471 fixed it...

Assignee: nobody → emilio
Status: NEW → ASSIGNED

With bug 1967114 we get meaningful regions for popups (even with rounded
corners). Bug 1674473 doesn't seem like an issue anymore, so try to do
this.

Status: ASSIGNED → RESOLVED
Closed: 1 month ago
Resolution: --- → FIXED
Target Milestone: --- → 142 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)

Can probably ride the trains.

Flags: needinfo?(emilio)
QA Whiteboard: [qa-triage-done-c143/b142]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: