Bug 1946586 - Set opaque region even without an EGL window. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D254738